# blog

./: Cargo.toml  README.md  flake.nix
assets/: style.css
src/: db.rs  github.rs  main.rs  posts.rs
templates/: about.jinja  atom.jinja  blog_index.jinja  blogpost.jinja  home.jinja  layout.jinja
