[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
minijinja = "2.10.2"
tokio = { version = "1.0", features = ["full"] }
scraper = "0.23.1"
chrono = {version = "0.4.41", features = ["serde"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
sled = "0.34.7"
bincode = "2.0.1"
