[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie", "typed-header"] }
minijinja = "2.18.0"
tokio = { version = "1.0", features = ["full"] }
scraper = "0.26.0"
chrono = "0.4.44"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs"] }
sled = "0.34.7"
oxicode = "0.2"
#octocrab = "0.49.7"
